--- a/coordinator-1.html
+++ b/coordinator-1.html
@@ -21,11 +21,11 @@
     />
   </head>
   <body>
-    <section class="section box-section contact-section py-4">
+    <section class="section box-section coordinator-section py-4">
       <div class="container-md ">
         <div class="text-center mb-5">
          <div class="fs-12 fw-bold" >
-          الرئيسية / تواصل معنا
+          الرئيسية / مناسباتك
          </div>
          <div class="lg-title mb-3">
           تواصل معنا
