--- a/coordinator-1.html
+++ b/coordinator-1.html
@@ -23,32 +23,40 @@
   <body>
     <section class="section box-section coordinator-section py-4">
       <div class="container-md ">
-        <div class="text-center mb-5">
+        <div class="text-center">
          <div class="fs-12 fw-bold" >
           الرئيسية / مناسباتك
          </div>
          <div class="lg-title mb-3">
-          تواصل معنا
+          المنسق
          </div>
-         <p class="fw-bold mb-2">هل لديك أي إستفسار؟</p>
-         <p class="fw-bold mb-0">لا تترد وتواصل معنا وأخبرنا بذلك</p>
+         <p class="fw-bold mb-0">
+           دعني أساعدك للتنسيق للمناسبة الخاصة بك, وأطرح عليك بعض الأسئلة لأقتراح لك مجموعة مزودي الخدمات التي تلبي إحتياجك.
+         </p>
+         <small class="d-block my-4 fw-bold">
+          الخطوة 1/3
+         </small>
         </div>
         <form action=""class="d-flex flex-column gap-3">
          <div class="main-inp">
           <i class="icon fas fa-user"></i>
-          <input type="text" placeholder="الإسم الأول" >
+          <input type="text" placeholder="الإسم الكامل" >
         </div>
         <div class="main-inp">
-          <i class="icon fas fa-user"></i>
-          <input type="text" placeholder="الإسم الثاني" >
+          <i class="icon fas fa-envelope"></i>
+          <input type="email" placeholder=" الإيميل" >
         </div>
         <div class="main-inp">
           <i class="icon fas fa-mobile"></i>
           <input type="text" placeholder="رقم الهاتف" >
         </div>
         <div class="main-inp">
-          <i class="icon fas fa-envelope"></i>
-          <input type="email" placeholder=" الإيميل" >
+          <i class="icon fas fa-users"></i>
+          <input type="text" placeholder=" العدد المتوقع للضيوف" >
+        </div>
+        <div class="main-inp">
+          <i class="icon fas fa-map"></i>
+          <input type="text" placeholder="عنوان المدينة" >
         </div>
         <div>
          <p class="d-flex align-items-center gap-2 mb-1">
@@ -59,7 +67,7 @@
         </div>
         <div class="d-flex align-items-center justify-content-center gap-3">
          <a href="" class="main-btn btn-yellow">
-          ارسال
+          التالي
          </a>
         </div>
         </form>
