--- a/layout.html
+++ b/layout.html
@@ -32,16 +32,60 @@
             </button>
             <div class="offcanvas offcanvas-end" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
               <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
               </div>
               <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                  <li class="nav-item">
-                    <a class="nav-link active" href="#">Home</a>
+                  <li class="nav-item nav-img">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQLRrfGmicNOQwEeoCv7JtxJ69QOxUfJq0eyg&usqp=CAU" class="img-user" alt="">
+                    <h5>محمد المهدي</h5>
+                    <h6>+1 (141) 437-8785</h6>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link active" href="#">
+                      <i class="nav-icon bx bx-home"></i>
+                      الرئيسية
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">
+                      <i class='bx bx-error-alt'></i>
+                      عن المنصه
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">
+                      <i class='bx bx-user'></i>
+                      إنضم لنا / الشركات
+                    </a>
+                  </li>
+                </ul>
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 mt-5">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">
+                      <i class='bx bx-check-shield'></i>
+                      سياسة الخصوصية
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">
+                      <i class='bx bx-book-bookmark'></i>
+                      شروط الاستخدام
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">
+                      <i class='bx bx-revision'></i>
+                      سياسة الارجاع
+                    </a>
+                  </li>
+                </ul>
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 mt-5">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">
+                      <i class='bx bx-log-in'></i>
+                      تسجيل الخروج
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -68,7 +112,7 @@
       <nav class="navbar main-nav py-1">
         <div class="container-md">
           <ul
-            class="navbar-nav nav-menu align-items-center align-items-md-start"
+            class="navbar-nav nav-menu align-items-center"
             id="nav-menu"
           >
             <li class="nav-item">
