--- a/coordinator-3.html
+++ b/coordinator-3.html
@@ -34,142 +34,46 @@
            دعني أساعدك للتنسيق للمناسبة الخاصة بك, وأطرح عليك بعض الأسئلة لأقتراح لك مجموعة مزودي الخدمات التي تلبي إحتياجك.
          </p>
          <small class="d-block my-4 fw-bold">
-          الخطوة 2/3
+          الخطوة 3/3
          </small>
         </div>
         <p class="fs-6 d-flex align-items-center gap-2">
-         <i class="fa-solid fa-border-all"></i>
-         الخدمات المطلوبة
+         <i class="fas fa-coins"></i>
+         الميزانية المتوقعة
         </p>
         <form action="">
-         <div class="row row-gap-24 mb-5">
-          <div class="col-4 col-md-3">
-           <div class="btn-inp-check">
-            <div class="inp-icon">
-             <i class="fas fa-check"></i>
-            </div>
-            <input type="checkbox" class="inp" name="" id="">
-            <div class="box-icon">
-             <i class="fa-solid fa-brush icon"></i>
-            </div>
-            <div class="text">
-             الديكورات والزينة
-            </div>
-           </div>
-          </div>
-          <div class="col-4 col-md-3">
-           <div class="btn-inp-check">
-            <div class="inp-icon">
-             <i class="fas fa-check"></i>
-            </div>
-            <input type="checkbox" class="inp" name="" id="">
-            <div class="box-icon">
-             <i class="fa-solid fa-landmark icon"></i>
-            </div>
-            <div class="text">
-             القاعات
-            </div>
-           </div>
-          </div>
-          <div class="col-4 col-md-3">
-           <div class="btn-inp-check">
-            <div class="inp-icon">
-             <i class="fas fa-check"></i>
-            </div>
-            <input type="checkbox" class="inp" name="" id="">
-            <div class="box-icon">
-             <i class="fa-solid fa-wand-magic-sparkles icon"></i>
-            </div>
-            <div class="text">
-             التصميم
-            </div>
-           </div>
-          </div>
-          <div class="col-4 col-md-3">
-           <div class="btn-inp-check">
-            <div class="inp-icon">
-             <i class="fas fa-check"></i>
-            </div>
-            <input type="checkbox" class="inp" name="" id="">
-            <div class="box-icon">
-             <i class="fa-solid fa-cake-candles icon"></i>
-            </div>
-            <div class="text">
-             المأكولات
-            </div>
-           </div>
-          </div>
-          <div class="col-4 col-md-3">
-           <div class="btn-inp-check">
-            <div class="inp-icon">
-             <i class="fas fa-check"></i>
-            </div>
-            <input type="checkbox" class="inp" name="" id="">
-            <div class="box-icon">
-             <i class="fa-solid fa-champagne-glasses icon"></i>
-            </div>
-            <div class="text">
-             تجهيزات الزفاف
-            </div>
-           </div>
-          </div>
-          <div class="col-4 col-md-3">
-           <div class="btn-inp-check">
-            <div class="inp-icon">
-             <i class="fas fa-check"></i>
-            </div>
-            <input type="checkbox" class="inp" name="" id="">
-            <div class="box-icon">
-             <i class="fa-solid fa-landmark icon"></i>
-            </div>
-            <div class="text">
-             القاعات
-            </div>
-           </div>
-          </div>
-          <div class="col-4 col-md-3">
-           <div class="btn-inp-check">
-            <div class="inp-icon">
-             <i class="fas fa-check"></i>
-            </div>
-            <input type="checkbox" class="inp" name="" id="">
-            <div class="box-icon">
-             <i class="fa-solid fa-wand-magic-sparkles icon"></i>
-            </div>
-            <div class="text">
-             التصميم
-            </div>
-           </div>
-          </div>
-          <div class="col-4 col-md-3">
-           <div class="btn-inp-check">
-            <div class="inp-icon">
-             <i class="fas fa-check"></i>
-            </div>
-            <input type="checkbox" class="inp" name="" id="">
-            <div class="box-icon">
-             <i class="fa-solid fa-cake-candles icon"></i>
-            </div>
-            <div class="text">
-             المأكولات
-            </div>
-           </div>
-          </div>
-          <div class="col-4 col-md-3">
-           <div class="btn-inp-check">
-            <div class="inp-icon">
-             <i class="fas fa-check"></i>
-            </div>
-            <input type="checkbox" class="inp" name="" id="">
-            <div class="box-icon">
-             <i class="fa-solid fa-champagne-glasses icon"></i>
-            </div>
-            <div class="text">
-             تجهيزات الزفاف
-            </div>
-           </div>
-          </div>
-         </div>
+         <div class="d-flex align-items-center flex-wrap gap-3 mb-4 fs-6">
+          <label for="" class="d-flex align-items-center gap-2">
+            <input class="form-check-input bg-inp-check" type="checkbox" name="" id="">
+            بسيطة
+          </label>
+          <label for="" class="d-flex align-items-center gap-2">
+            <input class="form-check-input bg-inp-check" type="checkbox" name="" id="">
+            متوسطه
+          </label>
+          <label for="" class="d-flex align-items-center gap-2">
+            <input class="form-check-input bg-inp-check" type="checkbox" name="" id="">
+            عالية
+          </label>
+         </div> 
+         <div class="d-flex align-items-center flex-wrap gap-3 mb-5 fs-6">
+          <label for="" class="d-flex align-items-center gap-2">
+            <input class="form-check-input bg-inp-check" type="radio" name="1" id="">
+            500 أو أقل
+          </label>
+          <label for="" class="d-flex align-items-center gap-2">
+            <input class="form-check-input bg-inp-check" type="radio" name="1" id="">
+            500-2000
+          </label>
+          <label for="" class="d-flex align-items-center gap-2">
+            <input class="form-check-input bg-inp-check" type="radio" name="1" id="">
+            2000-4000
+          </label>
+          <label for="" class="d-flex align-items-center gap-2">
+            <input class="form-check-input bg-inp-check" type="radio" name="1" id="">
+            6000-8000
+          </label>
+         </div> 
         <div class="d-flex align-items-center justify-content-center gap-3">
          <a href="" class="main-btn btn-yellow">
           التالي
