--- a/login.html
+++ b/login.html
@@ -109,9 +109,9 @@
     </nav>
     <section class=" section login-section  py-3">
       <div class="container-md text-center">
-        <div class="lg-title">
+        <h2 class="lg-title">
           تسجيل الدخول
-        </div>
+        </h2>
         <a href="signIn.html" class="mb-4 d-block">
           ليس لديك حساب؟ <span class="">إنشاء حساب</span>
         </a>
