--- a/signIn.html
+++ b/signIn.html
@@ -109,9 +109,9 @@
     </nav>
     <section class=" section login-section  py-3">
       <div class="container-md text-center">
-        <div class="lg-title">
+        <h2 class="lg-title">
           إنشاء حساب
-        </div>
+        </h2>
         <a href="login.html" class="mb-4 d-block">
           هل لديك حساب بالفعل؟ <span class="">تسجيل الدخول</span>
         </a>
