--- a/contact.html
+++ b/contact.html
@@ -113,9 +113,9 @@
          <div class="fs-12 fw-bold" >
           الرئيسية / تواصل معنا
          </div>
-         <div class="lg-title mb-3">
+         <h2 class="lg-title mb-3">
           تواصل معنا
-         </div>
+         </h2>
          <p class="fw-bold mb-2">هل لديك أي إستفسار؟</p>
          <p class="fw-bold mb-0">لا تترد وتواصل معنا وأخبرنا بذلك</p>
         </div>
