--- a/coordinator-2.html
+++ b/coordinator-2.html
@@ -113,9 +113,9 @@
          <div class="fs-12 fw-bold" >
           الرئيسية / مناسباتك
          </div>
-         <div class="lg-title mb-3">
+         <h2 class="lg-title mb-3">
           المنسق
-         </div>
+         </h2>
          <p class="fw-bold mb-0">
            دعني أساعدك للتنسيق للمناسبة الخاصة بك, وأطرح عليك بعض الأسئلة لأقتراح لك مجموعة مزودي الخدمات التي تلبي إحتياجك.
          </p>
