--- a/index.html
+++ b/index.html
@@ -107,12 +107,13 @@
         </div>
       </div>
     </nav>
-    <section class="section">
+    <section class="section section-home">
+      <!-- Start Landing -->
       <div class="landing-page">
       <div class="container">
         <div class="box-content">
-          <h2>دعنا نساعدك<i class="fa-solid fa-exclamation"></i></h2>
-          <p>
+          <h1 class="fw-bold title m-0 mb-3">دعنا نساعدك!</h1>
+          <p class="text mb-2">
             دعنا نساعدك في التخطيط لمناسبتك من خلال
             <br>
             لنجد مايناسبك بسهولة
@@ -120,7 +121,76 @@
           <a href="#" class="main-btn btn-yellow">إبدا مع المنسق</a>
         </div>
       </div>
-    </div>
+      </div>
+      <!-- End Linding -->
+      <!-- Satrt your occasions -->
+      <div class="your-occasions py-5">
+        <div class="container">
+          <div class="d-flex align-items-center justify-content-between mb-3">
+            <h2 class="lg-title">
+              مناسباتك
+            </h2>
+            <a href="#" class="main-btn btn-yellow "> 
+              <i class="fa-solid fa-circle-plus"></i>
+              إنشاء مناسبة
+            </a>
+          </div>
+          <div class="d-flex flex-column gap-3">
+            <div class="box-occasions">
+              <div class="content">
+                <div class="header-box d-flex align-items-center justify-content-between mb-2">
+                  <h3>إسم المناسبة</h3>
+                  <div class="date text-center">
+                    التاريخ 
+                    <br>
+                    2022-2-5
+                  </div>
+                </div>
+                <div class="time d-flex align-items-center">
+                  <div class="item">
+                    <div class="num">15</div>
+                    <div>يوما</div>
+                  </div>
+                  <div class="item">
+                    <div class="num">22</div>
+                    <div>ساعه</div>
+                  </div>
+                  <div class="item">
+                    <div class="num">50</div>
+                    <div>دقيقة</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="box-occasions">
+              <div class="content">
+                <h1 class="d-flex align-items-center justify-content-center gap-2 m-0 mb-1">
+                  <i class="fa-solid fa-list-ul icon"></i>
+                  28
+                </h1>
+                  <div class="fs-6 text-center">
+                    خدمات مختارة
+                  </div>
+              </div>
+            </div>
+            <div class="box-occasions">
+              <div class="content">
+                <div class="d-flex align-items-end justify-content-center gap-1 mb-1">
+                  <h1 class="d-flex align-items-center justify-content-center gap-2 m-0 ">
+                    <i class="fa-solid fa-chart-line icon"></i>
+                    1500
+                  </h1>
+                  <span>ريال</span>
+                </div>
+                  <div class="fs-6 text-center">
+                    الميزانية المنفقة
+                  </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End your occasions -->
     </section>
     <header class="header" id="header">
       <nav class="navbar main-nav py-1">
