--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/bootstrap.rtl.min.css" />
     <!--  Normalize Css File -->
     <link rel="stylesheet" href="css/normalize.css" />
+    <!--  swiper Css File -->
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <!-- Main  Css File -->
     <link rel="stylesheet" href="css/main.css" />
     <!-- Font Awesome Library File -->
@@ -191,6 +193,71 @@
         </div>
       </div>
       <!-- End your occasions -->
+      <!-- Start Sections -->
+      <div class="sections py-5">
+        <div class="container">
+          <div class="d-flex align-items-center justify-content-between mb-2">
+            <h2 class="lg-title">
+              الأقسام المتوفرة
+            </h2>
+            <a href="#" class="main-btn btn-yellow "> 
+              عرض الكل
+            </a>
+          </div>
+          <p class="mb-3">
+            أعثر علي مزودي الخدمات التي تحتاجها وخطط لمناسباتك بكل سهولة
+          </p>
+          <div class="swiper main-swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <a href="" class="box-sections">
+                  <img src="./img/hall.jpg" alt="" class="bg-img">
+                  <div class="badge-box">
+                    مزود 25
+                  </div>
+                  <div class="title">
+                    القاعات
+                  </div>
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="" class="box-sections">
+                  <img src="./img/hall.jpg" alt="" class="bg-img">
+                  <div class="badge-box">
+                    مزود +50
+                  </div>
+                  <div class="title">
+                    المأكولات
+                  </div>
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="" class="box-sections">
+                  <img src="./img/hall.jpg" alt="" class="bg-img">
+                  <div class="badge-box">
+                    مزود 10
+                  </div>
+                  <div class="title">
+                    التصوير
+                  </div>
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="" class="box-sections">
+                  <img src="./img/hall.jpg" alt="" class="bg-img">
+                  <div class="badge-box">
+                    مزود 25
+                  </div>
+                  <div class="title">
+                    ديكورات وزينة
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End Sections -->
     </section>
     <header class="header" id="header">
       <nav class="navbar main-nav py-1">
@@ -229,6 +296,8 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <!-- FontAwesome Library Js File -->
     <script src="js/all.min.js"></script>
+    <!-- swiper Library Js File -->
+    <script src="js/swiper-bundle.min.js"></script>
     <!-- Main Js File -->
     <script src="js/main.js"></script>
   </body>
