--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
               </div>
               <div class="swiper-slide">
                 <a href="" class="box-sections">
-                  <img src="./img/hall.jpg" alt="" class="bg-img">
+                  <img src="./img/foods.webp" alt="" class="bg-img">
                   <div class="badge-box">
                     مزود +50
                   </div>
@@ -233,7 +233,7 @@
               </div>
               <div class="swiper-slide">
                 <a href="" class="box-sections">
-                  <img src="./img/hall.jpg" alt="" class="bg-img">
+                  <img src="./img/photography.jpg" alt="" class="bg-img">
                   <div class="badge-box">
                     مزود 10
                   </div>
@@ -244,7 +244,7 @@
               </div>
               <div class="swiper-slide">
                 <a href="" class="box-sections">
-                  <img src="./img/hall.jpg" alt="" class="bg-img">
+                  <img src="./img/decorated.webp" alt="" class="bg-img">
                   <div class="badge-box">
                     مزود 25
                   </div>
@@ -254,10 +254,32 @@
                 </a>
               </div>
             </div>
+            <div class="swiper-button-next swiper-btn"></div>
+            <div class="swiper-button-prev swiper-btn"></div>
           </div>
         </div>
       </div>
       <!-- End Sections -->
+      <!-- Start last offers  -->
+      <div class="last-offers py-5">
+        <div class="container">
+          <div class="d-flex align-items-center justify-content-between mb-2">
+            <h2 class="lg-title">
+              أخر العروض
+            </h2>
+            <a href="#" class="main-btn btn-yellow "> 
+              عرض الكل
+            </a>
+          </div>
+          <p class="mb-3">
+            إستغل العروض المقدمة من مزودي الخدمات وحافظ على ميزانيتك أثناء التحطيط.
+          </p>
+          <div class="d-flex flex-column gap-3">
+            <div class="box-offer"></div>
+          </div>
+        </div>
+      </div>
+      <!-- End last offers  -->
     </section>
     <header class="header" id="header">
       <nav class="navbar main-nav py-1">
