--- a/my-events.html
+++ b/my-events.html
@@ -117,6 +117,21 @@
         إبداء التخطيط لمناسباتك بإختيار الأقسام التي تحتاجها ضمن الأقسام التي تحتاج ضمن قائمة أفضل مزودي خدمات لتختار مايناسبك بكل سهولة
        </p>
        </div>
+       <div class="d-flex align-items-center justify-content-center gap-3 mb-4">
+         <a href="#" class="main-btn-tap active">
+          المناسبات الجارية
+         </a>
+         <a href="#" class="main-btn-tap">
+          المناسبات المكتملة
+         </a>
+       </div>
+       <div class="d-flex flex-column gap-3">
+        <div class="box-border">
+         <div class="d-flex align-items-start gap-3 ">
+          <img src="./img/decorated.webp" alt="" class="img-box">
+         </div>
+        </div>
+       </div>
       </div>
     </section>
     <header class="header" id="header">
