--- a/my-events.html
+++ b/my-events.html
@@ -117,92 +117,216 @@
         إبداء التخطيط لمناسباتك بإختيار الأقسام التي تحتاجها ضمن الأقسام التي تحتاج ضمن قائمة أفضل مزودي خدمات لتختار مايناسبك بكل سهولة
        </p>
        </div>
-       <div class="d-flex align-items-center justify-content-center gap-3 mb-4">
-         <a href="#" class="main-btn-tap active">
-          المناسبات الجارية
-         </a>
-         <a href="#" class="main-btn-tap">
-          المناسبات المكتملة
-         </a>
-       </div>
-       <div class="d-flex flex-column gap-3">
-        <div class="box-border">
-         <div class="d-flex align-items-start gap-3 ">
-          <img src="./img/decorated.webp" alt="" class="img-box">
-          <div class="text mb-3">
-           <div class="title mb-2 fs-6 fw-bold">
-            أسم المناسبة
+       <ul class="nav nav-pills d-flex align-items-center justify-content-center gap-3 mb-4" id="pills-tab" role="tablist">
+        <li class="nav-item" role="presentation">
+          <button class="nav-link active main-btn-tap active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">المناسبات الجارية</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link main-btn-tap " id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">المناسبات المكتملة</button>
+        </li>
+      </ul>
+      <div class="tab-content" id="pills-tabContent">
+       <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+        <div class="d-flex flex-column gap-3">
+         <div class="box-border">
+          <div class="d-flex align-items-start gap-3 ">
+           <img src="./img/decorated.webp" alt="" class="img-box">
+           <div class="text mb-3">
+            <div class="title mb-2 fs-6 fw-bold">
+             أسم المناسبة
+            </div>
+            <p class=mb-0>
+             لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور
+                   أنكايديديونتيوت لابوري ات دولار ماجنا أليكيوا . يوت انيم أد مينيم فينايم,كيواس نوستريد    
+            </p>
            </div>
-           <p class=mb-0>
-            لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور
-                  أنكايديديونتيوت لابوري ات دولار ماجنا أليكيوا . يوت انيم أد مينيم فينايم,كيواس نوستريد    
-           </p>
+          </div>
+          <div class="info d-flex align-items-center justify-content-between mb-3">
+           <div class="fs-6 d-flex align-items-center gap-1">
+             <i class="icon fas fa-list-ul"></i>
+             <span>
+              <b>الخدمات المطلوبة:</b>
+              10
+             </span>
+           </div>
+           <div class="fs-6 d-flex align-items-center gap-1">
+             <i class="icon fas fa-ticket"></i>
+             <span>
+              <b>العروض:</b>
+              10
+             </span>
+           </div>
+          </div>
+          <div class="d-flex justify-content-center">
+           <div class="main-btn">
+            عرض التفاصيل
+           </div>
           </div>
          </div>
-         <div class="info d-flex align-items-center justify-content-between mb-3">
-          <div class="fs-6 d-flex align-items-center gap-1">
-            <i class="icon fas fa-list-ul"></i>
-            <span>
-             <b>الخدمات المطلوبة:</b>
-             10
-            </span>
+         <div class="box-border">
+          <div class="d-flex align-items-start gap-3 ">
+           <img src="./img/decorated.webp" alt="" class="img-box">
+           <div class="text mb-3">
+            <div class="title mb-2 fs-6 fw-bold">
+             أسم المناسبة
+            </div>
+            <p class=mb-0>
+             لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور
+                   أنكايديديونتيوت لابوري ات دولار ماجنا أليكيوا . يوت انيم أد مينيم فينايم,كيواس نوستريد    
+            </p>
+           </div>
           </div>
-          <div class="fs-6 d-flex align-items-center gap-1">
-            <i class="icon fas fa-ticket"></i>
-            <span>
-             <b>العروض:</b>
-             10
-            </span>
+          <div class="info d-flex align-items-center justify-content-between mb-3">
+           <div class="fs-6 d-flex align-items-center gap-1">
+             <i class="icon fas fa-list-ul"></i>
+             <span>
+              <b>الخدمات المطلوبة:</b>
+              10
+             </span>
+           </div>
+           <div class="fs-6 d-flex align-items-center gap-1">
+             <i class="icon fas fa-ticket"></i>
+             <span>
+              <b>العروض:</b>
+              10
+             </span>
+           </div>
           </div>
-         </div>
-         <div class="d-flex justify-content-center">
-          <div class="main-btn">
-           عرض التفاصيل
+          <div class="d-flex justify-content-center">
+           <div class="main-btn">
+            عرض التفاصيل
+           </div>
           </div>
          </div>
         </div>
-        <div class="box-border">
-         <div class="d-flex align-items-start gap-3 ">
-          <img src="./img/decorated.webp" alt="" class="img-box">
-          <div class="text mb-3">
-           <div class="title mb-2 fs-6 fw-bold">
-            أسم المناسبة
-           </div>
-           <p class=mb-0>
-            لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور
-                  أنكايديديونتيوت لابوري ات دولار ماجنا أليكيوا . يوت انيم أد مينيم فينايم,كيواس نوستريد    
-           </p>
-          </div>
-         </div>
-         <div class="info d-flex align-items-center justify-content-between mb-3">
-          <div class="fs-6 d-flex align-items-center gap-1">
-            <i class="icon fas fa-list-ul"></i>
-            <span>
-             <b>الخدمات المطلوبة:</b>
-             10
-            </span>
-          </div>
-          <div class="fs-6 d-flex align-items-center gap-1">
-            <i class="icon fas fa-ticket"></i>
-            <span>
-             <b>العروض:</b>
-             10
-            </span>
-          </div>
-         </div>
-         <div class="d-flex justify-content-center">
-          <div class="main-btn">
-           عرض التفاصيل
-          </div>
-         </div>
+        <div class="d-flex justify-content-center mt-4">
+         <a href="#" class="main-btn btn-yellow "> 
+          <i class="fa-solid fa-circle-plus"></i>
+          إنشاء مناسبة
+        </a>
         </div>
        </div>
-       <div class="d-flex justify-content-center mt-4">
-        <a href="#" class="main-btn btn-yellow "> 
-         <i class="fa-solid fa-circle-plus"></i>
-         إنشاء مناسبة
-       </a>
+       <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+        <div class="d-flex flex-column gap-3">
+         <div class="box-border">
+          <div class="d-flex align-items-start gap-3 ">
+           <img src="./img/decorated.webp" alt="" class="img-box">
+           <div class="text  flex-fill">
+            <div class="d-flex align-items-center justify-content-between">
+             <div>
+              <div class="title mb-1 fs-6 fw-bold">
+               أسم المناسبة
+              </div>
+              <div class="badge-pink">
+               نوع المناسبة
+              </div>
+             </div>
+             <div class="date text-center">
+              <b>التاريخ:</b>
+              <br>
+              2022/2/8
+             </div>
+            </div>
+            <p class="text-center my-3">
+             لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور 
+            </p>
+           </div>
+          </div>
+        <div class="d-flex align-items-center justify-content-between gap-3 flex-wrap">
+          <div class="box-section-icon text-center">
+            <div class="box-icon">
+              <i class="fa-solid fa-landmark icon"></i>
+            </div>
+            <div class="fs-6">القاعات</div>
+            <div>إسم المتجر</div>
+          </div>
+          <div class="box-section-icon text-center">
+            <div class="box-icon">
+              <i class="fa-solid fa-wand-magic-sparkles icon"></i>
+            </div>
+            <div class="">التصميم</div>
+            <small>إسم المتجر</small>
+          </div>
+          <div class="box-section-icon text-center">
+            <div class="box-icon">
+              <i class="fa-solid fa-cake-candles icon"></i>
+            </div>
+            <div class="">المأكولات</div>
+            <small>إسم المتجر</small>
+          </div>
+          <div class="box-section-icon text-center">
+            <div class="box-icon">
+              <i class="fa-solid fa-champagne-glasses icon"></i>
+            </div>
+            <div class="">تجهيزات الزفاف</div>
+            <small>إسم المتجر</small>
+          </div>
+        </div>
+         </div>
+         <div class="box-border">
+          <div class="d-flex align-items-start gap-3 ">
+           <img src="./img/decorated.webp" alt="" class="img-box">
+           <div class="text  flex-fill">
+            <div class="d-flex align-items-center justify-content-between">
+             <div>
+              <div class="title mb-1 fs-6 fw-bold">
+               أسم المناسبة
+              </div>
+              <div class="badge-pink">
+               نوع المناسبة
+              </div>
+             </div>
+             <div class="date text-center">
+              <b>التاريخ:</b>
+              <br>
+              2022/2/8
+             </div>
+            </div>
+            <p class="text-center my-3">
+             لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور 
+            </p>
+           </div>
+          </div>
+        <div class="d-flex align-items-center justify-content-between gap-3 flex-wrap">
+          <div class="box-section-icon text-center">
+            <div class="box-icon">
+              <i class="fa-solid fa-landmark icon"></i>
+            </div>
+            <div class="fs-6">القاعات</div>
+            <div>إسم المتجر</div>
+          </div>
+          <div class="box-section-icon text-center">
+            <div class="box-icon">
+              <i class="fa-solid fa-wand-magic-sparkles icon"></i>
+            </div>
+            <div class="">التصميم</div>
+            <small>إسم المتجر</small>
+          </div>
+          <div class="box-section-icon text-center">
+            <div class="box-icon">
+              <i class="fa-solid fa-cake-candles icon"></i>
+            </div>
+            <div class="">المأكولات</div>
+            <small>إسم المتجر</small>
+          </div>
+          <div class="box-section-icon text-center">
+            <div class="box-icon">
+              <i class="fa-solid fa-champagne-glasses icon"></i>
+            </div>
+            <div class="">تجهيزات الزفاف</div>
+            <small>إسم المتجر</small>
+          </div>
+        </div>
+         </div>
+        </div>
+        <div class="d-flex justify-content-center mt-4">
+         <a href="#" class="main-btn btn-yellow "> 
+          <i class="fa-solid fa-circle-plus"></i>
+          إنشاء مناسبة
+        </a>
+        </div>
        </div>
+     </div>
       </div>
     </section>
     <header class="header" id="header">
