--- a/profile.html
+++ b/profile.html
@@ -132,6 +132,17 @@
          </li>
         </ul>
         <div class="title">
+         نبذة عني
+        </div>
+        <div class="container-md py-3">
+          <textarea name="" class="form-control" id=""  rows="4"></textarea>
+          <div class="d-flex justify-content-center mt-2">
+            <a href="" class="main-btn">
+              حفظ
+            </a>
+          </div>
+        </div>
+        <div class="title">
          وسائل التواصل
         </div>
         <ul class="list-profile">
