--- a/departments.html
+++ b/departments.html
@@ -143,7 +143,7 @@
           class="head-section d-flex align-items-center justify-content-between mb-4 gap-3 flex-wrap"
         >
           <div>
-            <h3 class="md-title mb-3">التصنيفات</h3>
+            <h3 class="md-title mb-3">الأقسام</h3>
             <p class="mb-0">
               إبدأ التخطيط لمناسبتك بإختيار الآقسام التي تحتاجها ضمن الآقسام
               <br />
@@ -156,7 +156,7 @@
             </select>
           </div>
         </div>
-        <div class="row g-3 mb-4">
+        <div class="row g-3">
           <div class="col-12 col-md-3">
             <div class="search-bar mb-3">
               <i class="bx bx-search"></i>
@@ -282,7 +282,9 @@
                     </label>
                   </li>
                   <li>
-                    <button class="main-btn mx-auto py-2 px-3 fs-12 rounded-2">إعادة الفرز</button>
+                    <button class="main-btn mx-auto py-2 px-3 fs-12 rounded-2">
+                      إعادة الفرز
+                    </button>
                   </li>
                 </ul>
               </div>
@@ -292,55 +294,129 @@
             <div class="row g-3">
               <div class="col-6 col-md-4">
                 <a href="#">
-                  <div class="box-department">
-                    <img src="img/maldives.jpg" alt="">
-                    <span class="added">مزود 25</span>
-                    <span class="name">القاعات</span>
+                  <div class="box-services">
+                    <div class="img-holder">
+                      <img src="img/maldives.jpg" alt="" />
+                    </div>
+                    <div class="btn-holder">
+                      <button class="btn-circle btn-heart">
+                        <i class="bx bx-heart"></i>
+                      </button>
+                    </div>
+                    <div class="text-content">
+                      <h5 class="name">إسم المزود</h5>
+                      <p class="des">
+                        لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج
+                        أليايت,سيت دو أيوسمود تيمبور أنكايديديونتيوت لابوري ات
+                        دولار أكسير
+                      </p>
+                      <div class="more-info">
+                        <div class="mony">
+                          <i class="fa-solid fa-sack-dollar"></i>
+                          <span>1500 ريال</span>
+                        </div>
+                        <div class="location">
+                          <i class="fa-solid fa-location-dot"></i>
+                          <span>موقع المزود</span>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </a>
               </div>
               <div class="col-6 col-md-4">
                 <a href="#">
-                  <div class="box-department">
-                    <img src="img/foods.webp" alt="">
-                    <span class="added">مزود +25</span>
-                    <span class="name">المآكولات</span>
+                  <div class="box-services">
+                    <div class="img-holder">
+                      <img src="img/landing.jpg" alt="" />
+                    </div>
+                    <div class="btn-holder">
+                      <button class="btn-circle btn-heart">
+                        <i class="bx bx-heart"></i>
+                      </button>
+                    </div>
+                    <div class="text-content">
+                      <h5 class="name">إسم المزود</h5>
+                      <p class="des">
+                        لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج
+                        أليايت,سيت دو أيوسمود تيمبور أنكايديديونتيوت لابوري ات
+                        دولار أكسير
+                      </p>
+                      <div class="more-info">
+                        <div class="mony">
+                          <i class="fa-solid fa-sack-dollar"></i>
+                          <span>1500 ريال</span>
+                        </div>
+                        <div class="location">
+                          <i class="fa-solid fa-location-dot"></i>
+                          <span>موقع المزود</span>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </a>
               </div>
               <div class="col-6 col-md-4">
                 <a href="#">
-                  <div class="box-department">
-                    <img src="img/photography.jpg" alt="">
-                    <span class="added">مزود 25</span>
-                    <span class="name">التصوير</span>
+                  <div class="box-services">
+                    <div class="img-holder">
+                      <img src="img/photography.jpg" alt="" />
+                    </div>
+                    <div class="btn-holder">
+                      <button class="btn-circle btn-heart">
+                        <i class="bx bx-heart"></i>
+                      </button>
+                    </div>
+                    <div class="text-content">
+                      <h5 class="name">إسم المزود</h5>
+                      <p class="des">
+                        لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج
+                        أليايت,سيت دو أيوسمود تيمبور أنكايديديونتيوت لابوري ات
+                        دولار أكسير
+                      </p>
+                      <div class="more-info">
+                        <div class="mony">
+                          <i class="fa-solid fa-sack-dollar"></i>
+                          <span>1500 ريال</span>
+                        </div>
+                        <div class="location">
+                          <i class="fa-solid fa-location-dot"></i>
+                          <span>موقع المزود</span>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </a>
               </div>
               <div class="col-6 col-md-4">
                 <a href="#">
-                  <div class="box-department">
-                    <img src="img/decorated.webp" alt="">
-                    <span class="added">مزود 25</span>
-                    <span class="name">ديكورات وزينة</span>
-                  </div>
-                </a>
-              </div>
-              <div class="col-6 col-md-4">
-                <a href="#">
-                  <div class="box-department">
-                    <img src="img/secret-garden.jpg" alt="">
-                    <span class="added">مزود 25</span>
-                    <span class="name">إسم القسم</span>
-                  </div>
-                </a>
-              </div>
-              <div class="col-6 col-md-4">
-                <a href="#">
-                  <div class="box-department">
-                    <img src="img/hall.jpg" alt="">
-                    <span class="added">مزود 25</span>
-                    <span class="name">إسم القسم</span>
+                  <div class="box-services">
+                    <div class="img-holder">
+                      <img src="img/secret-garden.jpg" alt="" />
+                    </div>
+                    <div class="btn-holder">
+                      <button class="btn-circle btn-heart">
+                        <i class="bx bx-heart"></i>
+                      </button>
+                    </div>
+                    <div class="text-content">
+                      <h5 class="name">إسم المزود</h5>
+                      <p class="des">
+                        لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج
+                        أليايت,سيت دو أيوسمود تيمبور أنكايديديونتيوت لابوري ات
+                        دولار أكسير
+                      </p>
+                      <div class="more-info">
+                        <div class="mony">
+                          <i class="fa-solid fa-sack-dollar"></i>
+                          <span>1500 ريال</span>
+                        </div>
+                        <div class="location">
+                          <i class="fa-solid fa-location-dot"></i>
+                          <span>موقع المزود</span>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </a>
               </div>
@@ -352,7 +428,9 @@
             <li class="page-item disabled">
               <a class="page-link">السابق</a>
             </li>
-            <li class="page-item"><a class="page-link active" href="#">01</a></li>
+            <li class="page-item">
+              <a class="page-link active" href="#">01</a>
+            </li>
             <li class="page-item"><a class="page-link" href="#">02</a></li>
             <li class="page-item"><a class="page-link" href="#">03</a></li>
             <li class="page-item"><a class="page-link" href="#">04</a></li>
