--- a/departments.html
+++ b/departments.html
@@ -156,7 +156,7 @@
             </select>
           </div>
         </div>
-        <div class="row g-3">
+        <div class="row g-3 mb-4">
           <div class="col-12 col-md-3">
             <div class="search-bar mb-3">
               <i class="bx bx-search"></i>
