--- a/create-event.html
+++ b/create-event.html
@@ -114,41 +114,216 @@
           الرئيسية / مناسباتك
          </div>
          <h2 class="lg-title mb-3">
-          المنسق
+          إنشاء مناسبة
          </h2>
-         <p class="fw-bold mb-0">
-           دعني أساعدك للتنسيق للمناسبة الخاصة بك, وأطرح عليك بعض الأسئلة لأقتراح لك مجموعة مزودي الخدمات التي تلبي إحتياجك.
+         <p class="fw-bold mb-4">
+           قم بإنشاء مناسبة للعثور على أفضل الخدمات والعروض
          </p>
+         <div class="fs-6  mb-2" >
+         بيانات صاحب المناسبة
+         </div>
         </div>
-        <form action=""class="d-flex flex-column gap-3">
-         <div class="main-inp">
-          <i class="icon fas fa-user"></i>
-          <input type="text" placeholder="الإسم الكامل" >
-        </div>
-        <div class="main-inp">
-          <i class="icon fas fa-envelope"></i>
-          <input type="email" placeholder=" الإيميل" >
-        </div>
-        <div class="main-inp">
-          <i class="icon fas fa-mobile"></i>
-          <input type="text" placeholder="رقم الهاتف" >
-        </div>
-        <div class="main-inp">
-          <i class="icon fas fa-users"></i>
-          <input type="text" placeholder=" العدد المتوقع للضيوف" >
-        </div>
-        <div class="main-inp">
-          <i class="icon fas fa-map"></i>
-          <input type="text" placeholder="عنوان المدينة" >
-        </div>
-        <div>
-         <p class="d-flex align-items-center gap-2 mb-1">
+        <form action=""class="">
+         <div class="d-flex flex-column gap-3 mb-4">
+          <div class="main-inp">
+           <i class="icon fas fa-user"></i>
+           <input type="text" placeholder="الإسم الكامل" >
+          </div>
+          <div class="main-inp">
+            <i class="icon fas fa-envelope"></i>
+            <input type="email" placeholder=" الإيميل" >
+          </div>
+          <div class="main-inp">
+            <i class="icon fas fa-mobile"></i>
+            <input type="text" placeholder="رقم الهاتف" >
+          </div>
+          <div class="main-inp">
+            <i class="icon fas fa-users"></i>
+            <input type="text" placeholder=" العدد المتوقع للضيوف" >
+          </div>
+          <div class="main-inp">
+            <i class="icon fas fa-map"></i>
+            <input type="text" placeholder="عنوان المدينة" >
+          </div>
+          <div class="main-inp">
+           <i class="icon fa-solid fa-gifts"></i>
+            <input type="text" placeholder="نواع المناسبة" >
+          </div>
+         </div>
+         <p class="fs-6 d-flex align-items-center gap-2 mb-2">
+          <i class="fas fa-coins"></i>
+          الميزانية المتوقعة
+         </p>
+         <div class="d-flex align-items-center flex-wrap gap-2 mb-3 fs-6">
+          <label for="" class="d-flex align-items-center gap-2">
+            <input class="form-check-input bg-inp-check" type="checkbox" name="" id="">
+            بسيطة
+          </label>
+          <label for="" class="d-flex align-items-center gap-2">
+            <input class="form-check-input bg-inp-check" type="checkbox" name="" id="">
+            متوسطه
+          </label>
+          <label for="" class="d-flex align-items-center gap-2">
+            <input class="form-check-input bg-inp-check" type="checkbox" name="" id="">
+            عالية
+          </label>
+         </div> 
+         <div class="d-flex align-items-center flex-wrap gap-2 mb-4 fs-6">
+          <label for="" class="d-flex align-items-center gap-2">
+            <input class="form-check-input bg-inp-check" type="radio" name="1" id="">
+            500 أو أقل
+          </label>
+          <label for="" class="d-flex align-items-center gap-2">
+            <input class="form-check-input bg-inp-check" type="radio" name="1" id="">
+            500-2000
+          </label>
+          <label for="" class="d-flex align-items-center gap-2">
+            <input class="form-check-input bg-inp-check" type="radio" name="1" id="">
+            2000-4000
+          </label>
+          <label for="" class="d-flex align-items-center gap-2">
+            <input class="form-check-input bg-inp-check" type="radio" name="1" id="">
+            6000-8000
+          </label>
+         </div>
+         <p class="fs-6 d-flex align-items-center gap-2 mb-2">
+          <i class="fa-solid fa-border-all"></i>
+          الخدمات المطلوبة
+         </p>
+         <div class="row row-gap-24 mb-4">
+          <div class="col-4 col-md-3">
+           <div class="btn-inp-check">
+            <div class="inp-icon">
+             <i class="fas fa-check"></i>
+            </div>
+            <input type="checkbox" class="inp" name="" id="">
+            <div class="box-icon">
+             <i class="fa-solid fa-brush icon"></i>
+            </div>
+            <div class="text">
+             الديكورات والزينة
+            </div>
+           </div>
+          </div>
+          <div class="col-4 col-md-3">
+           <div class="btn-inp-check">
+            <div class="inp-icon">
+             <i class="fas fa-check"></i>
+            </div>
+            <input type="checkbox" class="inp" name="" id="">
+            <div class="box-icon">
+             <i class="fa-solid fa-landmark icon"></i>
+            </div>
+            <div class="text">
+             القاعات
+            </div>
+           </div>
+          </div>
+          <div class="col-4 col-md-3">
+           <div class="btn-inp-check">
+            <div class="inp-icon">
+             <i class="fas fa-check"></i>
+            </div>
+            <input type="checkbox" class="inp" name="" id="">
+            <div class="box-icon">
+             <i class="fa-solid fa-wand-magic-sparkles icon"></i>
+            </div>
+            <div class="text">
+             التصميم
+            </div>
+           </div>
+          </div>
+          <div class="col-4 col-md-3">
+           <div class="btn-inp-check">
+            <div class="inp-icon">
+             <i class="fas fa-check"></i>
+            </div>
+            <input type="checkbox" class="inp" name="" id="">
+            <div class="box-icon">
+             <i class="fa-solid fa-cake-candles icon"></i>
+            </div>
+            <div class="text">
+             المأكولات
+            </div>
+           </div>
+          </div>
+          <div class="col-4 col-md-3">
+           <div class="btn-inp-check">
+            <div class="inp-icon">
+             <i class="fas fa-check"></i>
+            </div>
+            <input type="checkbox" class="inp" name="" id="">
+            <div class="box-icon">
+             <i class="fa-solid fa-champagne-glasses icon"></i>
+            </div>
+            <div class="text">
+             تجهيزات الزفاف
+            </div>
+           </div>
+          </div>
+          <div class="col-4 col-md-3">
+           <div class="btn-inp-check">
+            <div class="inp-icon">
+             <i class="fas fa-check"></i>
+            </div>
+            <input type="checkbox" class="inp" name="" id="">
+            <div class="box-icon">
+             <i class="fa-solid fa-landmark icon"></i>
+            </div>
+            <div class="text">
+             القاعات
+            </div>
+           </div>
+          </div>
+          <div class="col-4 col-md-3">
+           <div class="btn-inp-check">
+            <div class="inp-icon">
+             <i class="fas fa-check"></i>
+            </div>
+            <input type="checkbox" class="inp" name="" id="">
+            <div class="box-icon">
+             <i class="fa-solid fa-wand-magic-sparkles icon"></i>
+            </div>
+            <div class="text">
+             التصميم
+            </div>
+           </div>
+          </div>
+          <div class="col-4 col-md-3">
+           <div class="btn-inp-check">
+            <div class="inp-icon">
+             <i class="fas fa-check"></i>
+            </div>
+            <input type="checkbox" class="inp" name="" id="">
+            <div class="box-icon">
+             <i class="fa-solid fa-cake-candles icon"></i>
+            </div>
+            <div class="text">
+             المأكولات
+            </div>
+           </div>
+          </div>
+          <div class="col-4 col-md-3">
+           <div class="btn-inp-check">
+            <div class="inp-icon">
+             <i class="fas fa-check"></i>
+            </div>
+            <input type="checkbox" class="inp" name="" id="">
+            <div class="box-icon">
+             <i class="fa-solid fa-champagne-glasses icon"></i>
+            </div>
+            <div class="text">
+             تجهيزات الزفاف
+            </div>
+           </div>
+          </div>
+         </div>
+         <p class="d-flex align-items-center gap-2 mb-2">
           <i class="fas fa-pen-to-square"></i>
           نص الرسالة
          </p>
-         <textarea name="" id=""class="main-textarea" placeholder="قم بأضافة ملاحظتك هنا......"></textarea>
-        </div>
-        <div class="d-flex align-items-center justify-content-center gap-3">
+         <textarea name="" id=""class="main-textarea mb-3" placeholder="قم بأضافة ملاحظتك هنا......"></textarea>
+        <div class="d-flex align-items-center justify-content-center gap-3 ">
          <a href="" class="main-btn btn-yellow">
           التالي
          </a>
